added javascript with error function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   
@@ -23,13 +24,15 @@
       <div id="logIn"> LOG IN</div>
       <div id="log" align="left">
         <p1 id="name">Username</p1>
-      <input  id="entername"  type="text" name="name" ><br>
+      <input  id="entername"  type="text" name="name" class="input" ><br>
       <p2 id="password">Password</p2>
-      <input  id="enterpassword"  type="text" name="name" >
+      <input  id="enterpassword"  type="text" name="name" class="input" >
 </div>
+<div id="errormessage">Invalid UserName or Password<br>Please try again</div>
 <button id="btn"><b>LOG IN</b></button>
      </div>
     </div>
+    
     <div class="col-sm-2">
      
     </div>
