added new file main.html and added ajax connection

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p2 id="password">Password</p2>
       <input  id="enterpassword"  type="text" name="name" class="input" >
 </div>
-<div id="errormessage">Invalid UserName or Password<br>Please try again</div>
+<div id="errormessage"></div>
 <button id="btn"><b>LOG IN</b></button>
      </div>
     </div>
